// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CompanyCardList Snapshot > renders with a single company and default props correctly 1`] = `
<div class="
  flex
  flex-col
  gap-y-6
">
  <div class="
    gap-4
    grid
    grid-cols-1
    lg:grid-cols-2
  ">
    <div class="company-card-stub">
      Test Company
    </div>
  </div>
  <div class="
    flex
    justify-center
  ">
    <nav aria-label="pagination">
      <div class="
        flex
        gap-1
        items-center
      ">
        <button
          aria-label="First Page"
          class="
            aria-disabled:bg-default
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-default
            disabled:bg-default
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:ring-2
            focus-visible:ring-inverted
            focus:outline-none
            font-medium
            gap-1.5
            hover:bg-elevated
            inline-flex
            items-center
            p-1.5
            ring
            ring-accented
            ring-inset
            rounded-md
            text-default
            text-sm
            transition-colors
          "
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="
              i-lucide:chevrons-left
              iconify
              shrink-0
              size-5
            "
          ></span>
          <!-- v-if -->
          <!-- v-if -->
        </button>
        <button
          aria-label="Previous Page"
          class="
            aria-disabled:bg-default
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-default
            disabled:bg-default
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:ring-2
            focus-visible:ring-inverted
            focus:outline-none
            font-medium
            gap-1.5
            hover:bg-elevated
            inline-flex
            items-center
            p-1.5
            ring
            ring-accented
            ring-inset
            rounded-md
            text-default
            text-sm
            transition-colors
          "
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="
              i-lucide:chevron-left
              iconify
              shrink-0
              size-5
            "
          ></span>
          <!-- v-if -->
          <!-- v-if -->
        </button>
        <button
          aria-current="page"
          aria-label="Page 1"
          class="
            aria-disabled:bg-primary
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-primary
            disabled:bg-primary
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:outline-2
            focus-visible:outline-offset-2
            focus-visible:outline-primary
            font-medium
            gap-1.5
            hover:bg-primary/75
            inline-flex
            items-center
            p-1.5
            rounded-md
            text-inverted
            text-sm
            transition-colors
          "
          data-selected="true"
          data-type="page"
          type="button"
          value="1"
        >
          <!-- v-if -->
          <span class="
            min-w-5
            text-center
            truncate
          ">
            1
          </span>
          <!-- v-if -->
        </button>
        <button
          aria-label="Next Page"
          class="
            aria-disabled:bg-default
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-default
            disabled:bg-default
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:ring-2
            focus-visible:ring-inverted
            focus:outline-none
            font-medium
            gap-1.5
            hover:bg-elevated
            inline-flex
            items-center
            p-1.5
            ring
            ring-accented
            ring-inset
            rounded-md
            text-default
            text-sm
            transition-colors
          "
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="
              i-lucide:chevron-right
              iconify
              shrink-0
              size-5
            "
          ></span>
          <!-- v-if -->
          <!-- v-if -->
        </button>
        <button
          aria-label="Last Page"
          class="
            aria-disabled:bg-default
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-default
            disabled:bg-default
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:ring-2
            focus-visible:ring-inverted
            focus:outline-none
            font-medium
            gap-1.5
            hover:bg-elevated
            inline-flex
            items-center
            p-1.5
            ring
            ring-accented
            ring-inset
            rounded-md
            text-default
            text-sm
            transition-colors
          "
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="
              i-lucide:chevrons-right
              iconify
              shrink-0
              size-5
            "
          ></span>
          <!-- v-if -->
          <!-- v-if -->
        </button>
      </div>
    </nav>
  </div>
</div>
`;

exports[`CompanyCardList Snapshot > renders with an empty companies list correctly 1`] = `
<div class="
  flex
  flex-col
  gap-y-6
">
  <div
    class="
      bg-default
      flex
      gap-2.5
      items-start
      overflow-hidden
      p-4
      relative
      ring
      ring-default
      ring-inset
      rounded-lg
      text-highlighted
      w-full
    "
    data-orientation="vertical"
  >
    <!-- v-if -->
    <div class="
      flex
      flex-1
      flex-col
      min-w-0
    ">
      <!-- v-if -->
      <div class="
        opacity-90
        text-sm
      ">
        No items found for the given filters.
      </div>
      <!-- v-if -->
    </div>
    <!-- v-if -->
  </div>
</div>
`;

exports[`CompanyCardList Snapshot > renders with multiple companies and all toggles enabled correctly 1`] = `
<div
  class="
    flex
    flex-col
    gap-y-6
  "
  showexpandedcontent="true"
  showfeatures="true"
  showprosandcons="true"
  showreadmore="true"
>
  <div class="
    gap-4
    grid
    grid-cols-1
    lg:grid-cols-2
  ">
    <div class="company-card-stub">
      Company One
    </div>
    <div class="company-card-stub">
      Company Two
    </div>
  </div>
  <div class="
    flex
    justify-center
  ">
    <nav aria-label="pagination">
      <div class="
        flex
        gap-1
        items-center
      ">
        <button
          aria-label="First Page"
          class="
            aria-disabled:bg-default
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-default
            disabled:bg-default
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:ring-2
            focus-visible:ring-inverted
            focus:outline-none
            font-medium
            gap-1.5
            hover:bg-elevated
            inline-flex
            items-center
            p-1.5
            ring
            ring-accented
            ring-inset
            rounded-md
            text-default
            text-sm
            transition-colors
          "
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="
              i-lucide:chevrons-left
              iconify
              shrink-0
              size-5
            "
          ></span>
          <!-- v-if -->
          <!-- v-if -->
        </button>
        <button
          aria-label="Previous Page"
          class="
            aria-disabled:bg-default
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-default
            disabled:bg-default
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:ring-2
            focus-visible:ring-inverted
            focus:outline-none
            font-medium
            gap-1.5
            hover:bg-elevated
            inline-flex
            items-center
            p-1.5
            ring
            ring-accented
            ring-inset
            rounded-md
            text-default
            text-sm
            transition-colors
          "
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="
              i-lucide:chevron-left
              iconify
              shrink-0
              size-5
            "
          ></span>
          <!-- v-if -->
          <!-- v-if -->
        </button>
        <button
          aria-current="page"
          aria-label="Page 1"
          class="
            aria-disabled:bg-primary
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-primary
            disabled:bg-primary
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:outline-2
            focus-visible:outline-offset-2
            focus-visible:outline-primary
            font-medium
            gap-1.5
            hover:bg-primary/75
            inline-flex
            items-center
            p-1.5
            rounded-md
            text-inverted
            text-sm
            transition-colors
          "
          data-selected="true"
          data-type="page"
          type="button"
          value="1"
        >
          <!-- v-if -->
          <span class="
            min-w-5
            text-center
            truncate
          ">
            1
          </span>
          <!-- v-if -->
        </button>
        <button
          aria-label="Next Page"
          class="
            aria-disabled:bg-default
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-default
            disabled:bg-default
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:ring-2
            focus-visible:ring-inverted
            focus:outline-none
            font-medium
            gap-1.5
            hover:bg-elevated
            inline-flex
            items-center
            p-1.5
            ring
            ring-accented
            ring-inset
            rounded-md
            text-default
            text-sm
            transition-colors
          "
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="
              i-lucide:chevron-right
              iconify
              shrink-0
              size-5
            "
          ></span>
          <!-- v-if -->
          <!-- v-if -->
        </button>
        <button
          aria-label="Last Page"
          class="
            aria-disabled:bg-default
            aria-disabled:cursor-not-allowed
            aria-disabled:opacity-75
            bg-default
            disabled:bg-default
            disabled:cursor-not-allowed
            disabled:opacity-75
            focus-visible:ring-2
            focus-visible:ring-inverted
            focus:outline-none
            font-medium
            gap-1.5
            hover:bg-elevated
            inline-flex
            items-center
            p-1.5
            ring
            ring-accented
            ring-inset
            rounded-md
            text-default
            text-sm
            transition-colors
          "
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="
              i-lucide:chevrons-right
              iconify
              shrink-0
              size-5
            "
          ></span>
          <!-- v-if -->
          <!-- v-if -->
        </button>
      </div>
    </nav>
  </div>
</div>
`;
